--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,12 @@
 
     <div class="welcomeDiv">
       <div class="welcomeMsg">Library Management</div>
-      <div class="userType"><h3>“If you don’t like to read, you haven’t found the right book.” -J.K. Rowling</h3></div>
+      <div class="userType">
+        <h3>
+          “If you don’t like to read, you haven’t found the right book.” -J.K.
+          Rowling
+        </h3>
+      </div>
     </div>
 
     <div class="selection">
