--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
 
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <div class="navBar">
       <div class="logo">
         <a href="homepage.html">
-          <img src="../assets/book.jpeg" alt="book" />
+          <img src="assets/book.jpeg" alt="book" />
         </a>
       </div>
     </div>
 
-    <img class="backgroundImg" src="../assets/homepage (2).jpg" alt="img" />
+    <img class="backgroundImg" src="assets/homepage (2).jpg" alt="img" />
 
     <div class="welcomeDiv">
       <div class="welcomeMsg">Library Management</div>
