--- a/admin/adminAuthors.html
+++ b/admin/adminAuthors.html
@@ -7,8 +7,8 @@
   <title>Document</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="../../css/index.css">
-  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
@@ -16,7 +16,7 @@
   <div class="navBar">
     <div class="logo">
       <a href="../homepage.html">
-        <img src="../../assets/books.jpg" alt="book">
+        <img src="../assets/books.jpg" alt="book">
       </a>
     </div>
     <div class="navButtons">
