--- a/borrower/borrowerOptions.html
+++ b/borrower/borrowerOptions.html
@@ -6,15 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 
-  <link rel="stylesheet" href="../../css/index.css">
-  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../index.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
   <div class="navBar">
     <div class="logo">
       <a href="../homepage.html">
-        <img src="../../assets/books.jpg" alt="book">
+        <img src="../assets/books.jpg" alt="book">
       </a>
     </div>
   </div>
